# fastapi-di-demo

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: container.py  endpoints.py  func_call_order_service.py  main.py  settings.py
app/services/order_service/: __init__.py  func_call_order_service.py  http_order_service.py
app2/: __init__.py
app2/app/: container.py  endpoints.py  main.py  settings.py
app2/app/services/: __init__.py
app2/app/services/order_service/: __init__.py  http_order_service.py  order_service.py
