[project]
name = "fastapi-di-demo"
version = "0.1.0"
description = "A injection-based FastAPI demo application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "pyrefly"
]
[tool.pyrefly]
project_includes = ["**/*"]
project_excludes = [
    "**/.[!/.]*",
    "**/*venv/**/*",
]
